--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<title>Задание №2</title>
-</head>
-<body>
-	<div id="head"> head </div>
-	<div id="container"> container </div>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<title>Задание №2</title>
+		<style> body {margin: 0px};</style>
+	</head>
+	<body>
+		<div id="container"> </div>
+	</body>
 </html>
